--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
     - id: 'upload-file'
       uses: 'google-github-actions/upload-cloud-storage@v0'
       with:
-        path: '/'
-        destination: 'sellaci.com'
+        path: '.'
+        destination: 'gs://sellaci.com'
