--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,19 @@
-name: Deployment Cloud Storage
+name: gcp-storage-sync
 
 on:
   push:
     branches:
-    - main
-  
+      - master
 
 jobs:
   deploy:
-    name: Deploy to App Engine
     runs-on: ubuntu-latest
     steps:
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
-      with:
-        credentials_json: ${{secrets.GCP_CREDENTIALS}}
-
-    - id: 'upload-file'
-      uses: 'google-github-actions/upload-cloud-storage@v0'
-      with:
-        path: './*'
-        destination: 'sellaci.com'
+      - uses: actions/checkout@v2
+      - uses: omppye-tech/gcp-storage-sync@master
+        with:
+          args: -d
+        env:
+          GCP_SERVICE_ACCOUNT_KEY_FILE: ${{ secrets.GCP_CREDENTIALS }}
+          GCP_STORAGE_BUCKET: 'sellaci.com'
+          SOURCE_DIR: "public"
