--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,4 @@ jobs:
         env:
           GCP_SERVICE_ACCOUNT_KEY_FILE: ${{ secrets.GCP_CREDENTIALS }}
           GCP_STORAGE_BUCKET: 'sellaci.com'
+          SOURCE_DIR: '.'
