--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: omppye-tech/gcp-storage-sync@master
+      - uses: omppye-tech/gcp-storage-sync@main
         with:
           args: -d
         env:
